<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/menu_principal"
        android:title="@string/principal"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/menu_hoteles"
        android:title="@string/hoteles"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/menu_bares"
        android:title="@string/bares"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/menu_sitios_turisticos"
        android:title="@string/sitios_turisticos"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/menu_demografia"
        android:title="@string/demografia"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/menu_acercade"
        android:title="@string/acercade"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
