<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/guarceño"
                android:textSize="19sp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/guarceño_info"
                android:textSize="14sp"
                android:textColor="@color/darkmagenta"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/guarceno"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/deleite"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/deleite_info"
                android:textSize="14sp"
                android:textColor="@color/darkmagenta"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/deleite"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/serenata"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/serenata_info"
                android:textSize="14sp"
                android:textColor="@color/darkmagenta"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:src="@drawable/serenata"
                android:layout_weight="1"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
