<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.josevargas.turismoelretiro20.principal">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/principal_intro"
                            android:textSize="14sp"
                            android:textColor="@color/darkmagenta"
                            android:layout_weight="1"/>

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="230sp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/el_retiro"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/principal_intro2"
                            android:textSize="14sp"
                            android:textColor="@color/darkmagenta"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/principal_intro3"
                            android:textSize="14sp"
                            android:textColor="@color/darkmagenta"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/distancia"
                            android:layout_marginTop="20dp"
                            android:textSize="14sp"
                            android:textColor="@color/darkmagenta"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/temp"
                            android:textSize="14sp"
                            android:textColor="@color/darkmagenta"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/altura"
                            android:textSize="14sp"
                            android:textColor="@color/darkmagenta"
                            android:layout_weight="1"/>
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

    </FrameLayout>

